# try_openai_agent

./: .gitignore  ARDUINO_SETUP.md  CLAUDE.md  GOOGLE_ADK_MIGRATION.md  README.md  api_server.py  app.py  google_adk_app.py  main.py  pyproject.toml  test_arduino_connection.py  test_google_adk.py  test_google_adk_async.py  test_refactoring.py  test_session_creation.py  test_wifi_haptic.py  try_context.py  try_openai_agent.py
arduino/haptic_feedback_controller/: README.md  config.h.template  haptic_feedback_controller.ino  haptic_feedback_controller_r4wifi.ino  haptic_feedback_controller_serial.ino  haptic_feedback_controller_websocket.ino
arduino_code/: haptic_feedback_server.ino
docs/: api_documentation.md  communication_protocol.md  pipeline_integration.md
examples/: haptic_feedback_integration_example.py
src/: __init__.py  google_adk_main.py  main.py
src/agents/: __init__.py  agents.py  emotion_agents.py  factory.py  google_adk_emotion_agents.py  google_adk_factory.py  instructions.py
src/api/: __init__.py  app.py  models.py  server.py
src/config/: __init__.py  settings.py
src/devices/: __init__.py  arduino_controller.py  base_controller.py  device_interface.py  pipeline_integration.py  pipeline_integration_serial.py  serial_controller.py  vibration_patterns.py  websocket_controller.py
src/learning/: emotion_learner.py  feedback_collector.py  fine_tuning.py
src/models/: __init__.py  data_models.py  feedback_models.py
src/pipeline/: emotion_classifier.py  emotion_processor.py  error_handler.py  (+5 more)
tests/: test_api.py  test_pipeline_integration.py
(+16 files in other folders)
