[project]
name = "try-openai-agent"
version = "0.1.0"
description = "OpenAI agent pipeline for emotion-based responses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.68.2",
    "openai-agents>=0.0.7",
    "streamlit>=1.44.1",
    "aiohttp>=3.8.5",
    "pydantic>=2.0.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "pytest>=7.3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
